...
    SavedFlowReview.PersonPurpose.VERIFICATION -> R.string.taffy_flow_person_verification
    SavedFlowReview.PersonPurpose.ONE_TIME_CODE -> R.string.taffy_flow_person_code
    SavedFlowReview.PersonPurpose.FORM_DETAILS -> R.string.taffy_flow_person_details
}

const val SAVED_FLOW_REVIEW_TEST_TAG: String = "saved_flow_review"
const val SAVED_FLOW_ADDRESS_TEST_TAG: String = "saved_flow_address"

